<resources>
    <string name="app_name">WaitR</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="Username">Username</string>
    <string name="logout">Logout</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="your_companies">Your Companies:</string>
    <string name="create_company">Create Company</string>
    <string name="scrollable_company_list">scrollable_company_list</string>
    <string name="join_company">Join Company</string>
    <string name="company_name">Company name</string>
    <string name="create">Create</string>
    <string name="model_view">Model_view</string>
    <string name="food_menu">food_menu</string>
    <string name="analytics">analytics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter">Enter</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="members">Members</string>
    <string name="invite">Invite</string>
    <string name="scene1">Scene1</string>
    <string name="edit">edit</string>
    <string name="help">help</string>
    <string name="invite_user">Invite user</string>
    <string name="here_you_can_invite_users">Here you can invite users</string>
    <string name="here_you_create_your_company">Here you create your Company</string>
    <string name="email_of_user_you_want_to_invite">Email of user you want to invite</string>
    <string name="invites">Invites</string>
    <string name="scrollable_menu_list">scrollable_menu_list</string>
    <string name="menu">Menu</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_menu_item">Add menu item</string>
    <string name="add_menu_group">Add menu group</string>
    <string name="item_name">Item name</string>
    <string name="item_price">Item price</string>
    <string name="item_discription">Item discription</string>
    <string name="add">Add</string>
    <string name="group_name">Group name</string>
    <string name="group">Group</string>
    <string name="name">Name:</string>
    <string name="change_name">Change name</string>
    <string name="item">Item</string>
    <string name="price">Price:</string>
    <string name="change_price">Change price</string>
    <string name="description">Description:</string>
    <string name="change_description">Change description</string>
    <string name="add_scene">Add Scene</string>
    <string name="add_table">Add Table</string>
    <string name="add_helpershape">Add HelperShape</string>
    <string name="scene_name">Scene name</string>
    <string name="table_name">Table name</string>
    <string name="scrollable_scene_list">scrollable_scene_list</string>
    <string name="done">Done</string>
    <string name="table">Table</string>
    <string name="change_height">Change height</string>
    <string name="height">Height:</string>
    <string name="change_width">Change width</string>
    <string name="width">Width:</string>
    <string name="helper">Helper</string>
    <string name="scene">Scene</string>
    <string name="Close">Close</string>
    <string name="table_is_currently_empty">Table is currently empty</string>
    <string name="new_customers">New customers</string>
    <string name="choose_the_number_of_customers">Choose the number of customers</string>
    <string name="confirm">Confirm</string>
    <string name="Check_out">Check out</string>
    <string name="Mark_as_served">Mark as Served</string>
    <string name="remove_item">Remove Item</string>
    <string name="add_item">Add item</string>
    <string name="Continue">Continue</string>
    <string name="notifications">Notifications</string>
    <string name="promote_to_manager">Promote to manager</string>
    <string name="kick">Kick</string>
    <string name="Analytics">Analytics</string>
    <string name="profile">Profile</string>
    <string name="change_username">Change username</string>
    <string name="change_password">Change password</string>
    <string name="change">Change</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="create_your_company">Create your company</string>
    <string name="model">Model</string>
    <string name="invite_users">Invite users</string>
    <string name="search_item">Search item</string>
</resources>