<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/manager_notifications_button"
            android:title="@string/notifications"
            android:icon="@drawable/baseline_circle_notifications_24"
            android:actionLayout="@layout/menu_badge_layout">
        </item>
        <item android:id="@+id/manager_settings_button"
            android:title="@string/settings"
            android:icon="@drawable/baseline_app_settings_alt_24">
        </item>
        <item android:id="@+id/manager_show_members_button"
            android:title="@string/members"
            android:icon="@drawable/baseline_emoji_emotions_24">
        </item>
        <item android:id="@+id/manager_add_members_button"
            android:title="@string/invite"
            android:icon="@drawable/baseline_add_24">
        </item>
        <item android:id="@+id/manager_logout_of_company_button"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout">
        </item>
    </group>
</menu>